samples/_failures_safe/1761432625_ea720c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efa8e74d.c: In function ‘state_machine_step’:
./samples/SAFE/__tmp_efa8e74d.c:164:17: error: expected expression at end of input
  164 |                 case
      |                 ^~~~
./samples/SAFE/__tmp_efa8e74d.c:164:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efa8e74d.c:164:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efa8e74d.c:164:17: error: expected declaration or statement at end of input
